# find-duplicates

./: CMakeLists.txt  LICENSE  README.md  test.sh
src/: Aggregator.cpp  Aggregator.hpp  Comparator.hpp  ComparatorFactory.cpp  ComparatorFactory.hpp  Filter.cpp  Filter.hpp  Finder.cpp  Finder.hpp  MD5Comparator.cpp  MD5Comparator.hpp  MemcmpComparator.cpp  MemcmpComparator.hpp  main.cpp
